feat: 添加自定义排除 IP 功能并重构排除逻辑
- 在界面中添加文本区域以支持用户输入自定义排除的 IP 地址列表
- 重构核心排除逻辑，使用新的 `splitRange` 函数统一处理网络、广播、网关及自定义 IP 的排除
- 改进输出统计信息，将“Total Rows”更改为“Total Ranges”以更准确地反映输出
- 清理并简化了 `rangeToCIDR` 和 `getCIDRRange` 函数中的注释和代码

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <label><input type="checkbox" id="exclude-gateway"> 排除网关 (通常为第一个可用 IP, e.g. .1)</label>
             </div>
 
+            <div class="input-group">
+                <label for="custom-exclude">排除其他 IP (每行一个，例如 192.168.1.100):</label>
+                <textarea id="custom-exclude" rows="5" placeholder="192.168.1.100"></textarea>
+            </div>
+
             <button onclick="convertCIDRToIP()">转换</button>
 
             <div class="output-group">
