feat: 添加IP排除选项并优化范围转换逻辑
- 在界面添加排除网络地址、广播地址、网关及自定义IP的选项
- 增强 rangeToCIDR 函数以支持数字和字符串输入
- 在转换过程中应用排除规则，先分割范围再转换为CIDR
- 改进错误处理，对无效范围返回空数组而非错误消息

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                 <textarea id="ip-input" rows="10" placeholder="192.168.1.1&#10;192.168.1.1-192.168.1.10"></textarea>
             </div>
 
+            <div class="options">
+                <label><input type="checkbox" id="ip-exclude-network"> 排除网络地址 (Range Start)</label>
+                <label><input type="checkbox" id="ip-exclude-broadcast"> 排除广播地址 (Range End)</label>
+                <label><input type="checkbox" id="ip-exclude-gateway"> 排除网关 (Range Start + 1)</label>
+            </div>
+
+            <div class="input-group">
+                <label for="ip-custom-exclude">排除其他 IP (每行一个，例如 192.168.1.100):</label>
+                <textarea id="ip-custom-exclude" rows="5" placeholder="192.168.1.100"></textarea>
+            </div>
+
             <button onclick="convertIPToCIDR()">转换</button>
 
             <div class="output-group">
